tests/requests/valid/020.http
GET /first HTTP/1.0\r\n
Content-Length: 24\r\n
\r\n
GET /second HTTP/1.1\r\n
\r\n